--- a/src/styles/_colors.css
+++ b/src/styles/_colors.css
@@ -1,3 +1,12 @@
 :root {
+  --background-dark: rgb(0, 0, 128);
+  --background-lighter: rgb(220, 220, 220);
+  --toxic-green: rgba(0, 128, 0);
+  --dangerous-red: rgb(128, 0, 0);
+  --gradient-red: #f5baba;
+  --juicy-yellow: #f2f545;
+  --shiny-blue: #caedec;
+  --shadow-blue: #6dd8f2;
   /* Define your variable colors here */
 }
+ 
